[package]
authors = ["Jonas Schievink <jonas@schievink.net>"]
description = "My odd way of learning JITs and Vulkan ¯\\_(ツ)_/¯"
name = "chip-8"
version = "0.1.0"

[dependencies]
byteorder = "0.5.3"
clap = "2.6.0"
cpal = "0.2.11"
enum-set = "0.0.6"
env_logger = "0.3.3"
fnv = "1.0.2"
log = "0.3.6"
minifb = "0.7.1"

[dependencies.memmap]
branch = "exec"
git = "https://github.com/jonas-schievink/memmap-rs.git"
