[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "My odd way of learning JITs ¯\\_(ツ)_/¯"
name = "chip-8"
version = "0.1.0"
license = "CC0-1.0"

[dependencies]
byteorder = "0.5.3"
clap = "2.6.0"
enum-set = "0.0.6"
env_logger = "0.3.3"
fnv = "1.0.2"
log = "0.3.6"
memmap = "0.4.0"
minifb = "0.7.1"
rand = "0.3.14"
